fix train button to work on iphone

--- a/css/screen-words.css
+++ b/css/screen-words.css
@@ -1,3 +1,7 @@
+.title-item.right {
+    color: #00B7FF;
+}
+
 .dictionary {
     display: flex;
     width: 100%;
